--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Employee List</title>
+    <title> Employee_Management_WebApp</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
         <a href="/dashboard" class="hover:text-green-800">Dashboard</a>
         <a href="/owners/admin" class="hover:text-green-800">Create Employee</a>
         <a href="/employees" class="hover:text-green-800">Employee List</a>
-        <a href="/employeess/logout" class="text-red-600 hover:text-red-800">Logout</a>
+        <a href="/users/logout" class="text-red-600 hover:text-red-800">Logout</a>
       </div>
       <% } %>
     </nav>
