--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>Employee_Management_WebApp</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -18,9 +18,8 @@
         <% if(loggedin){ %>
 
             <div class="flex mt-3 gap-5 text-xl text-bold mr-14">
-                <a href="/dashboard">Shop</a>
-                <a href="/cart">Cart</a>
-                <a href="">My Account</a>
+                <a href="/dashboard">dashbaord</a>
+                <a href="/employees">employees</a> 
                 <a class="text-red-600" href="/users/logout">Logout</a>
             </div>
 
